--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -12,85 +12,125 @@
         </div>
     </div>
 
+
     <form id="js_searchform" action="{% url 'wally:find' %}" method="get">
         <div class="panel panel-default">
-
             <div class="panel-heading">
                 <div class="row">
-                    <div class='col-md-9'>
-                        <div class="form-group">
-                            {% comment %}Translators: placeholder of search-box{% endcomment %}
-                            <input type="text" class="form-control" name="query" class="fulltext" id="query"
-                                   placeholder="{% trans "Full-text search" %}"/>
-                        </div>
-                    </div>
-                    <div class='col-md-1'>
-                        <button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
-                    </div>
-                    <div class='col-md-2'>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" name="include_spam"
-                                       id="include_spam"/> {% trans "search in spam as well" %}
-                            </label>
+                    <div class="col-md-12">
+
+                        <div class="row">
+                            <div class='col-md-9'>
+                                <div class="form-group">
+                                    {% comment %}Translators: placeholder of search-box{% endcomment %}
+                                    <input type="text" class="form-control" name="query" class="fulltext" id="query"
+                                           placeholder="{% trans "Full-text search" %}"/>
+                                </div>
+                            </div>
+                            <div class='col-md-1'>
+                                <button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
+                            </div>
+                            <div class='col-md-2'>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" name="include_spam"
+                                               id="include_spam"/> {% trans "search in spam as well" %}
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="only_attachment"
+                                                   id="only_attachment"/> {% trans "only mails with attachment" %}
+                                        </label>
+                                    </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel-body">
                 <div class="row">
-                    <div class='col-md-2'>
-                        <div class="form-group">
-                            <label for="use_sliding_value">{% trans "Date filter mode" %}</label>
-                            <div class="input-group">
-                                <select class="form-control" id="use_sliding_value" name="use_sliding_value">
-                                    <option value="1" selected="selected">{% trans "Sliding duration" %}</option>
-                                    <option value="0">{% trans "Fixed date" %}</option>
-                                </select>
+                    <div class="col-md-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class='col-md-3'>
+                                    <div class="form-group">
+                                        <label for="use_sliding_value">{% trans "Date filter mode" %}</label>
+                                        <div class="input-group">
+                                            <select class="form-control" id="use_sliding_value"
+                                                    name="use_sliding_value">
+                                                <option value="1"
+                                                        selected="selected">{% trans "Sliding duration" %}</option>
+                                                <option value="0">{% trans "Fixed date" %}</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class='js_date_sliding_value collapse col-md-9'>
+                                    <div class="form-group row">
+                                        <div class="col-md-6">
+                                            <label for="date_sliding_value">{% trans "Within the past" %}</label>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" id="date_sliding_value"
+                                                       name="date_sliding_value" value="5">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label for="date_sliding_type">{% trans "Duration type" %}</label>
+                                            <div class="input-group">
+                                                <select class="form-control" id="date_sliding_type"
+                                                        name="date_sliding_type">
+                                                    <option value="y" selected="selected">{% trans "Years" %}</option>
+                                                    <option value="M">{% trans "Months" %}</option>
+                                                    <option value="d">{% trans "Days" %}</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% trans "JST time" as jsttime %}
+                                <div class='js_date_fixed collapse col-md-9'>
+                                    <div class="form-group row">
+                                        <div class="col-md-6">
+                                            <label for="from">{% trans "From" context "datetime" %}</label>
+                                            - {{ jsttime }}
+                                            <div class='input-group date' id='datetimepicker-from'>
+                                                <input type='text' class="form-control" name="from"
+                                                       placeholder="2012/11/01 00:00"/>
+                                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label for="to">{% trans "To" context "datetime" %}</label> - {{ jsttime }}
+                                            <div class='input-group date' id='datetimepicker-to'>
+                                                <input type='text' class="form-control" name="to"
+                                                       placeholder="2016/10/31 12:18"/>
+                                                <!--type="datetime-local"-->
+                                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class='js_date_sliding_value collapse col-md-4'>
-                        <div class="form-group row">
-                            <div class="col-md-6">
-                                <label for="date_sliding_value">{% trans "Within the past" %}</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" id="date_sliding_value"
-                                           name="date_sliding_value" value="5">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="date_sliding_type">{% trans "Duration type" %}</label>
-                                <div class="input-group">
-                                    <select class="form-control" id="date_sliding_type" name="date_sliding_type">
-                                        <option value="y" selected="selected">{% trans "Years" %}</option>
-                                        <option value="M">{% trans "Months" %}</option>
-                                        <option value="d">{% trans "Days" %}</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% trans "JST time" as jsttime %}
-                    <div class='js_date_fixed collapse col-md-6'>
-                        <div class="form-group row">
-                            <div class="col-md-6">
-                                <label for="from">{% trans "From" context "datetime" %}</label> - {{ jsttime }}
-                                <div class='input-group date' id='datetimepicker-from'>
-                                    <input type='text' class="form-control" name="from" placeholder="2012/11/01 00:00"/>
-                                    <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-calendar"></span>
-                                </span>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="to">{% trans "To" context "datetime" %}</label> - {{ jsttime }}
-                                <div class='input-group date' id='datetimepicker-to'>
-                                    <input type='text' class="form-control" name="to" placeholder="2016/10/31 12:18"/>
-                                    <!--type="datetime-local"-->
-                                    <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-calendar"></span>
-                                </span>
+
+                    <div class="col-md-2">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="form-group">
+                                    <label for="number_results">{% trans "Number of results" %}</label>
+                                    <div class="input-group">
+                                        <select class="form-control" id="number_results"
+                                                name="number_results">
+                                            <option value="10" selected="selected">{% trans "10" %}</option>
+                                            <option value="20">20</option>
+                                            <option value="50">50</option>
+                                            <option value="100">100</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
                         </div>
