--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -40,7 +40,7 @@
                                 <div class="checkbox">
                                         <label>
                                             <input type="checkbox" name="only_attachment"
-                                                   id="only_attachment"/> {% trans "only mails with attachment" %}
+                                                   id="only_attachment"/> {% trans "only emails with attachments" %}
                                         </label>
                                     </div>
                             </div>
