--- a/howler/wally_search/templates/wally/results.html
+++ b/howler/wally_search/templates/wally/results.html
@@ -6,117 +6,120 @@
 {% load i18n %}
 
 {% comment %}Translators: Sender of email{% endcomment %}
-{% trans "Sender:" as sender %}
+{% trans "Sender" as sender %}
 {% comment %}Translators: Receiver of email{% endcomment %}
-{% trans "Receiver:" as receiver %}
-{% trans "Attachments:" as attachments %}
+{% trans "Receiver" as receiver %}
+{% trans "Attachments" as attachments %}
 {% if hit_list %}
-    {% for hit in hit_list %}
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class='col-md-10'>
-                        {% comment %}Translators: email-subject{% endcomment %}
-                        <label>{% trans "Subject:" %}</label>
-                        {% if hit.meta.highlight.subject.0 %}
-                            {{ hit.meta.highlight.subject.0|safe }}
-                        {% else %}
-                            {{ hit.subject }}
-                        {% endif %}
-                    </div>
-                    <div class='col-md-2'>
-                        {% comment %}Translators: Score of a search result{% endcomment %}
-                        <label>{% trans "Score:" %}</label> {{ hit.meta.score|floatformat:1 }}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class='col-md-3'>
-                        {% comment %}Translators: Sent (date/time){% endcomment %}
-                        <label>{% trans "Sent:" %}</label> {{ hit.date }}
-                    </div>
-                    <div class='col-md-3'>
-                        <label>{{ sender }}</label>
-                        {% if hit.meta.highlight.fromEmail.0 %}
-                            {{ hit.meta.highlight.fromEmail.0|safe }}
-                        {% else %}
-                            {{ hit.fromEmail }}
-                        {% endif %}
-                    </div>
-                    <div class='col-md-4'>
-                        <label>{{ receiver }}</label>
-                        {% if hit.meta.highlight.toEmail.0 %}
-                            {{ hit.meta.highlight.toEmail.0|safe }}
-                        {% else %}
-                            {{ hit.toEmail }}
-                        {% endif %}
-                    </div>
-                    <div class='col-md-2'>
-                        <label>{% trans "Language:" %}</label>
-                        {{ hit.langCode }} ({{ hit.langPercent }}%)
-                    </div>
-                </div>
-            </div>
-            <div class="panel-body">
-                {% if hit.meta.highlight.replyToEmail.0 %}
-                    <p class="fragment">
-                        <b>{% trans "Hit in Reply-To Email/Name:" %}
-                        </b>
-                        {{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}
-                    </p>
-                {% endif %}
+    <table class="table table-striped-custom table-email" id="js_result_table">
+        <thead>
+        <tr>
+            <th></th>
+            <th>{% trans "Subject:" %}</th>
+            <th>{% trans "Sent:" %}</th>
+            <th>{{ sender }}</th>
+            <th>{{ receiver }}</th>
+            <th class="text-right">{% trans "Score:" %}</th>
+        </tr>
+        </thead>
 
-                {% if hit.meta.highlight.fromName.0 %}
-                    <p class="fragment">
-                        <b>{% trans "Hit in sender name:" %}</b>
-                        {{ hit.meta.highlight.fromName.0|safe }}
-                    </p>
-                {% endif %}
-
-                {% if hit.meta.highlight.toName.0 %}
-                    <p class="fragment">
-                        <b>{% trans "Hit in receiver name:" %}</b> {{ hit.meta.highlight.toName.0|safe }}
-                    </p>
-                {% endif %}
-
-                {% if hit.meta.highlight.attachmentNames.0 %}
-                    <p class="fragment">
-                        <b>{% trans "Hit in attachment names:" %}</b> {{ hit.meta.highlight.attachmentNames.0|safe }}
-                    </p>
-                {% endif %}
-
-                {% if hit.meta.highlight.body %}
-                    <b>{% trans "Hits in body:" %}</b>
-                    {% for fragment in hit.meta.highlight.body %}
-                        <p class="fragment">
-                            {{ fragment|safe|linebreaks }}
-                        </p>
-                    {% endfor %}
-                {% endif %}
-
-                <div class="panel-group">
-                    <div class="panel panel-success">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" href="#collapse{{ forloop.counter0 }}">{% trans "View email content" %}</a>
-                            </h4>
-                        </div>
-                        <div id="collapse{{ forloop.counter0 }}" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <div class="well">
-                                    <p><b>{{ sender }}</b> {{ hit.fromName }} &lt;{{ hit.fromEmail }}&gt;</p>
-                                    <p><b>{{ receiver }}</b> {{ hit.toName }} &lt;{{ hit.toEmail }}&gt;</p>
-                                    {% if hit.attachmentNames %}
-                                        <p><b>{{ attachments }}</b> {{ hit.attachmentNames }}</p>
+        <tbody>
+        {% for hit in hit_list %}
+            <tr data-toggle="popover">
+                <td class="details-control">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    <span class="glyphicon glyphicon-minus"></span>
+                </td>
+                <td>
+                    {% if hit.meta.highlight.subject.0 %}
+                        {{ hit.meta.highlight.subject.0|safe }}
+                    {% else %}
+                        {{ hit.subject }}
+                    {% endif %}
+                    <div class="collapse js_popover_content">
+                        <div class="panel-group">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    {% if hit.meta.highlight.replyToEmail.0 %}
+                                        <p class="fragment">
+                                            <b>{% trans "Hit in Reply-To Email/Name:" %}
+                                            </b>
+                                            {{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}
+                                        </p>
                                     {% endif %}
-                                    {{ hit.body|linebreaks }}
+
+                                    {% if hit.meta.highlight.fromName.0 %}
+                                        <p class="fragment">
+                                            <b>{% trans "Hit in sender name:" %}</b>
+                                            {{ hit.meta.highlight.fromName.0|safe }}
+                                        </p>
+                                    {% endif %}
+
+                                    {% if hit.meta.highlight.toName.0 %}
+                                        <p class="fragment">
+                                            <b>{% trans "Hit in receiver name:" %}</b> {{ hit.meta.highlight.toName.0|safe }}
+                                        </p>
+                                    {% endif %}
+
+                                    {% if hit.meta.highlight.attachmentNames.0 %}
+                                        <p class="fragment">
+                                            <b>{% trans "Hit in attachment names:" %}</b> {{ hit.meta.highlight.attachmentNames.0|safe }}
+                                        </p>
+                                    {% endif %}
+
+                                    {% if hit.meta.highlight.body %}
+                                        <b>{% trans "Hits in body:" %}</b>
+                                        {% for fragment in hit.meta.highlight.body %}
+                                            <p class="fragment">
+                                                {{ fragment|safe|linebreaks }}
+                                            </p>
+                                        {% endfor %}
+                                    {% endif %}
+
+
+                                    <b>{% trans "Email content" %}:</b>
+                                    <div id="collapse{{ forloop.counter0 }}" class="panel-collapse "><!--collapse-->
+                                        <div class="panel-body">
+                                            <div class="well">
+                                                <p><b>{{ sender }}</b> {{ hit.fromName }} &lt;{{ hit.fromEmail }}&gt;
+                                                </p>
+                                                <p><b>{{ receiver }}</b> {{ hit.toName }} &lt;{{ hit.toEmail }}&gt;</p>
+                                                {% if hit.attachmentNames %}
+                                                    <p><b>{{ attachments }}</b> {{ hit.attachmentNames }}</p>
+                                                {% endif %}
+                                                {{ hit.body|linebreaks }}
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
+                </td>
+                <td>
+                    {{ hit.date }}
+                </td>
+                <td>
+                    {% if hit.meta.highlight.fromEmail.0 %}
+                        {{ hit.meta.highlight.fromEmail.0|safe }}
+                    {% else %}
+                        {{ hit.fromEmail }}
+                    {% endif %}
+                </td>
+                <td>
+                    {% if hit.meta.highlight.toEmail.0 %}
+                        {{ hit.meta.highlight.toEmail.0|safe }}
+                    {% else %}
+                        {{ hit.toEmail }}
+                    {% endif %}
+                </td>
+                <td class="text-right">
+                    {{ hit.meta.score|floatformat:1 }}
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
 {% else %}
     <div class="panel panel-warning">
