--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -20,17 +20,17 @@
                     <div class="col-md-12">
 
                         <div class="row">
-                            <div class='col-md-9'>
+                            <div class='col-md-6 col-lg-7'>
                                 <div class="form-group">
                                     {% comment %}Translators: placeholder of search-box{% endcomment %}
                                     <input type="text" class="form-control" name="query" class="fulltext" id="query"
                                            placeholder="{% trans "Full-text search" %}"/>
                                 </div>
                             </div>
-                            <div class='col-md-1'>
+                            <div class='col-md-2 col-lg-2'>
                                 <button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
                             </div>
-                            <div class='col-md-2'>
+                            <div class='col-md-4 col-lg-3'>
                                 <div class="checkbox">
                                     <label>
                                         <input type="checkbox" name="include_spam"
@@ -48,10 +48,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-9 col-lg-7">
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <div class='col-md-3'>
+                                <div class='col-md-5'>
                                     <div class="form-group">
                                         <label for="use_sliding_value">{% trans "Date filter mode" %}</label>
                                         <div class="input-group">
@@ -64,7 +64,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class='js_date_sliding_value collapse col-md-9'>
+                                <div class='js_date_sliding_value collapse col-md-7'>
                                     <div class="form-group row">
                                         <div class="col-md-6">
                                             <label for="date_sliding_value">{% trans "Within the past" %}</label>
@@ -117,16 +117,16 @@
                         </div>
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-3 col-lg-3">
                         <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="form-group">
-                                    <label for="number_results">{% trans "Number of results" %}</label>
+                                    <label for="number_results">{% trans "Number of total results" %}</label>
                                     <div class="input-group">
                                         <select class="form-control" id="number_results"
                                                 name="number_results">
-                                            <option value="10" selected="selected">{% trans "10" %}</option>
-                                            <option value="20">20</option>
+                                            <option value="10">{% trans "10" %}</option>
+                                            <option value="25" selected="selected">25</option>
                                             <option value="50">50</option>
                                             <option value="100">100</option>
                                         </select>
