--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -58,7 +58,7 @@
                                             <select class="form-control" id="use_sliding_value"
                                                     name="use_sliding_value">
                                                 <option value="1"
-                                                        selected="selected">{% trans "Sliding duration" %}</option>
+                                                        selected="selected">{% trans "Within past duration" %}</option>
                                                 <option value="0">{% trans "Fixed date" %}</option>
                                             </select>
                                         </div>
@@ -125,7 +125,7 @@
                                     <div class="input-group">
                                         <select class="form-control" id="number_results"
                                                 name="number_results">
-                                            <option value="10">{% trans "10" %}</option>
+                                            <option value="10">10</option>
                                             <option value="25" selected="selected">25</option>
                                             <option value="50">50</option>
                                             <option value="100">100</option>
