--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,6 +34,7 @@
 
 <body>
 
+<div style="display: none;" id="js_language_code" data-language-code="{{LANGUAGE_CODE}}"></div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
