--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -2,17 +2,6 @@
 {% load i18n %}
 
 {% block main %}
-    <div class="row">
-        <div class='col-md-11'>
-            <!--<h1 class="page-header">Email search</h1>
-            <p>Welcome to Wally the email search! Please input at least one of the fields below to search your
-                emails.</p>-->
-
-            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-        </div>
-    </div>
-
-
     <form id="js_searchform" action="{% url 'wally:find' %}" method="get">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -126,7 +115,9 @@
                                         <select class="form-control" id="number_results"
                                                 name="number_results">
                                             <option value="10">10</option>
-                                            <option value="25" selected="selected">25</option>
+                                            <option value="15" selected="selected">15</option>
+                                            <option value="20">20</option>
+                                            <option value="25">25</option>
                                             <option value="50">50</option>
                                             <option value="100">100</option>
                                         </select>
