fixed js static url

--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -34,7 +34,8 @@
 
 <body>
 
-<div style="display: none;" id="js_language_code" data-language-code="{{LANGUAGE_CODE}}"></div>
+<div style="display: none;" id="js_page_settings" data-language-code="{{LANGUAGE_CODE}}" data-static-baseurl="{% static "" %}"></div>
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
