development documentation directly online

--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -59,6 +59,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <!--<li><a href="{% url 'wally:search' %}">Search</a></li>-->
+                <li><a href="{% url 'doc:home' %}">{% trans "Dev Doc" %}</a></li>
                 <li><a href="{% url 'settings:synonym' %}">{% trans "Settings" %}</a></li>
                 <li><a href="{% url 'admin:index' %}">{% trans "Admin" %}</a></li>
                 <!--<li><a href="#">Help</a></li>-->
