Sort by date, then sort resultset again by score

--- a/howler/wally_search/templates/wally/results.html
+++ b/howler/wally_search/templates/wally/results.html
@@ -128,7 +128,7 @@
                         <span class="glyphicon glyphicon-ok"></span>
                     {% endif %}
                 </td>
-                <td class="text-center" class="text-nowrap">
+                <td class="text-center text-nowrap js_score">
                     {{ hit.meta.score|floatformat:1 }}
                 </td>
             </tr>
