--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -137,9 +137,8 @@
                                             <div class="input-group">
                                                 <select class="form-control" id="sort_field"
                                                         name="sort_field">
-                                                    <option value="date">{% trans "Sent (JST)" %}</option>
-                                                    <option value="_score"
-                                                            selected="selected">{% trans "Score" %}</option>
+                                                    <option value="date" selected="selected">{% trans "Sent (JST)" %}</option>
+                                                    <option value="_score">{% trans "Score" %}</option>
                                                     <option value="fromEmail.raw">{% trans "Sender" %}</option>
                                                     <option value="toEmail.raw">{% trans "Receiver" %}</option>
                                                 </select>
