Added kibana dashboard

--- a/howler/settings/templates/settings/base_settings.html
+++ b/howler/settings/templates/settings/base_settings.html
@@ -19,6 +19,9 @@
         <li>
             <a href="{{ http_kibana }}" target="_blank">{% trans "Elasticsearch Kibana" %}</a>
         </li>
+        <li>
+            <a href="{{ http_kibana_dashboard }}" target="_blank">{% trans "Kibana Main Dashboard (Last 2 years)" %}</a>
+        </li>
     </ul>
 {% endblock %}
 
