--- a/howler/doc/templates/doc/base_doc.html
+++ b/howler/doc/templates/doc/base_doc.html
@@ -35,6 +35,11 @@
             <a href="{{ url_doc_importscript }}">{% trans "Email Import Script" %}</a>
         </li>
 
+        {% url 'doc:irc' as url_doc_irc %}
+        <li{% if request.path == url_doc_irc %} class="active"{% endif %}>
+            <a href="{{ url_doc_irc }}">{% trans "IRC" %}</a>
+        </li>
+
 {#        {% url 'doc:initsetup' as url_doc_initsetup %}#}
 {#        <li{% if request.path == url_doc_initsetup %} class="active"{% endif %}>#}
 {#            <a href="{{ url_doc_initsetup }}">{% trans "Initial setup" %}</a>#}
