--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -106,7 +106,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-lg-2">
+                    <div class="col-md-3 col-lg-2" style="display: none;">
                         <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="form-group">
@@ -115,11 +115,12 @@
                                         <select class="form-control" id="number_results"
                                                 name="number_results">
                                             <option value="10">10</option>
-                                            <option value="15" selected="selected">15</option>
+                                            <option value="15">15</option>
                                             <option value="20">20</option>
                                             <option value="25">25</option>
                                             <option value="50">50</option>
-                                            <option value="100">100</option>
+                                            <option value="100" selected="selected">100</option>
+                                            <option value="300">300</option>
                                         </select>
                                     </div>
                                 </div>
